--- a/pages/mall/subpages/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -21,7 +21,7 @@
       <image class="goods-image" src="{{item.image}}" lazy-load />
       <view class="content">
         <view class="goods-title omit single-line">{{item.name}}</view>
-        <price-unit price="{{item.price}}" />
+        <price-unit price="{{item.price || 0}}" />
       </view>
     </view>
   </scroll-view>
