--- a/pages/mall/subpages/goods/subpages/shop/index.wxss
+++ b/pages/mall/subpages/goods/subpages/shop/index.wxss
@@ -1,6 +1,6 @@
 .cover-wrap {
   position: relative;
-  height: 180rpx;
+  height: 360rpx;
   font-size: 0;
   overflow: hidden;
 }
@@ -11,4 +11,68 @@
   position: absolute;
   left: 8px;
   height: 44px;
+}
+
+.shop-info-wrap {
+  padding: 24rpx;
+  background: #fff;
+}
+.avatar-wrap {
+  position: relative;
+  width: 88rpx;
+  height: 88rpx;
+  font-size: 0;
+}
+.shop-avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.enterprise-label {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 30rpx;
+  height: 30rpx;
+}
+.info {
+  margin: 0 24rpx;
+  flex: 1;
+}
+.shop-name {
+  color: #333;
+  font-size: 30rpx;
+  font-weight: 550;
+}
+.authentication {
+  margin-top: 16rpx;
+  padding: 0 16rpx;
+  height: 32rpx;
+  width: fit-content;
+  color: #FFE5BD;
+  font-size: 18rpx;
+  line-height: 1;
+  border-radius: 16rpx;
+  background: linear-gradient(90deg, #434D5E 0%, #0F131A 100%);
+}
+.share-btn {
+  text-align: center;
+  color: #666;
+  font-size: 20rpx;
+  line-height: 1;
+}
+.share-icon {
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.goods-list-wrap {
+  padding: 24rpx;
+}
+
+.no-more-tips {
+  margin-top: 36rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
 }
