--- a/pages/mall/subpages/goods/subpages/goods-detail/components/spec-popup/index.wxss
+++ b/pages/mall/subpages/goods/subpages/goods-detail/components/spec-popup/index.wxss
@@ -6,37 +6,25 @@
   background-color: #fff;
   border-radius: 16rpx 16rpx 0 0;
 }
-.selectedGoods-info-wrap {
+
+.spec-info-wrap {
   display: flex;
+  align-items: flex-end;
   margin-bottom: 20rpx;
   height: 200rpx;
 }
-.selectedGoods-info {
-  padding-left: 24rpx;
-  flex: 1;
+.spec-image {
+  width: 200rpx;
   height: 200rpx;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  border-radius: 12rpx;
+}
+.spec-info {
+  margin-left: 24rpx;
+  flex: 1;
   color: #333;
   font-size: 24rpx;
 }
-.selectedGoods-name {
-  height: 90rpx;
-  font-size: 30rpx;
-  font-weight: 500;
-  color: #333;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-.selectedGoods-price {
-  color: #E82631;
-  font-size: 34rpx;
-}
-.selectedGoods-stock {
+.spec-stock {
   margin: 8rpx 0;
   color: #999;
 }
