--- a/pages/index/subpages/note/index.wxss
+++ b/pages/index/subpages/note/index.wxss
@@ -54,7 +54,7 @@
   bottom: 0;
   display: flex;
   align-items: center;
-  padding: 24rpx 80rpx env(safe-area-inset-bottom) 24rpx;
+  padding: 24rpx 80rpx calc(env(safe-area-inset-bottom) + 24rpx);
   width: 100%;
   background: #fff;
   z-index: 100;
