--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
@@ -54,9 +54,9 @@
   <!-- 规格选择 -->
   <view class="list-spec row">
     <view class="list-spec-title">规格</view>
-    <view class="choose-btn" bindtap="showSpecPopup">
+    <view class="choose-btn" bindtap="showSpecPopup" data-mode="{{0}}">
       <view class="choose-btn-desc omit single-line">
-        {{selecteSpecDesc || '请选择'}}
+        {{selecteSpecDesc ? ('已选：' + selecteSpecDesc) : '请选择'}}
       </view>
       <image class="choose-btn-icon" src="https://img.ubo.vip/mp/selection/goods-detail/to-icon.png" />
     </view>
