--- a/pages/mall/subpages/goods/subpages/cart/index.wxss
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxss
@@ -2,34 +2,37 @@
   position: fixed;
   top: 0;
   left: 0;
-  padding-left: 12px;
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 44px;
   background: #161F4E;
   box-sizing: initial;
-  z-index: 50;
+  z-index: 100;
 }
-.edit-icon {
-  margin-left: 10px;
-  padding: 0 20rpx;
-  height: 42rpx;
-  color: #fff;
-  font-size: 30rpx;
-  line-height: 42rpx;
-  border-radius: 21rpx;
+.nav-bar-btn {
+  margin-left: 8px;
+  width: fit-content;
+  height: 32px;
+  border-radius: 16px;
+  background: rgba(0, 0, 0, 0.3);
   border: 0.5px solid rgba(255,255,255,0.3);
 }
+.nav-back-icon {
+  margin-left: 4px;
+  margin-right: 6px;
+  width: 20px;
+  height: 20px;
+}
+.edit-btn {
+  padding-left: 10px;
+  padding-right: 12px;
+  color: #fff;
+  font-size: 14px;
+  border-left: 0.5px solid rgba(255,255,255,0.3);
+}
 .navigation-title {
-  position: absolute;
-  left: 50%;
-  bottom: 22px;
-  transform: translate(-50%, 50%);
-  color: #ffffff;
+  color: #fff;
   font-size: 32rpx;
   font-weight: 600;
-  line-height: 1;
 }
 
 checkbox {
