--- a/pages/mall/subpages/goods/subpages/cart/index.wxss
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxss
@@ -84,9 +84,12 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 }
 
 .wrap {
-  padding: 0 24rpx calc(68px + env(safe-area-inset-bottom));
+  padding-bottom: calc(68px + env(safe-area-inset-bottom));
 }
 
+.cart-list-wrap {
+  padding: 0 24rpx;
+}
 .cart-list {
   margin-top: 24rpx;
   padding: 32rpx 0;
@@ -221,6 +224,18 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   line-height: 42rpx;
   border-radius: 23rpx;
   border: 2rpx solid #FD0807;
+}
+
+.recommend-goods-wrap {
+  margin-top: 40rpx;
+  padding: 0 20rpx;
+}
+
+.nomore-tip {
+  padding: 18rpx 0;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
 }
 
 .bottom-bar {
