--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -36,16 +36,13 @@
                 <view class="goods-name {{_item.status !== 1 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
                 <block wx:if="{{_item.status === 1}}">
                   <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" bindtap="editSpec" data-info="{{_item}}">
-                    <text class="goods-sku">{{_item.selectedSkuName}}</text>
+                    <text class="goods-sku">已选：{{_item.selectedSkuName}}</text>
                     <image class="sku-edit-icon" src="https://img.ubo.vip/mp/to-icon.png" />
                   </view>
                   <view class="goods-price-wrap">
-                    <view class="goods-price">
-                      <view class="price-shop">
-                        <text>¥</text>
-                        <text style="font-size: 36rpx;">{{_item.price}}</text>
-                      </view>
-                      <view class="price-market">¥{{_item.marketPrice}}</view>
+                    <view class="goods-price row baseline">
+                      <price-unit price="{{_item.price}}" />
+                      <view class="price-market" wx:if="{{_item.marketPrice}}">¥{{_item.marketPrice}}</view>
                     </view>
                     <van-stepper value="{{ _item.number }}" bind:change="countChange" data-cart-index="{{index}}" data-goods-index="{{_index}}" integer max="{{_item.stock}}" />
                   </view>
