--- a/pages/mall/subpages/goods/subpages/cart/index.wxss
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxss
@@ -165,7 +165,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 .goods-sku-wrap {
   display: flex;
   align-items: center;
-  padding: 0 8rpx;
+  padding: 0 12rpx;
   height: 42rpx;
   width: fit-content;
   background: #f9f9f9;
@@ -174,7 +174,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 .goods-sku {
   flex: 1;
   color: #999;
-  font-size: 28rpx;
+  font-size: 24rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -182,6 +182,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   -webkit-box-orient: vertical;
 }
 .sku-edit-icon {
+  margin-left: 6rpx;
   width: 12rpx;
   height: 12rpx;
   transform: rotate(90deg);
@@ -194,10 +195,6 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 .goods-price {
   font-size: 24rpx;
   line-height: 1;
-}
-.price-shop {
-  color: #FD0B0A;
-  font-weight: 600;
 }
 .price-market {
   margin-left: 10rpx;
