--- a/pages/mall/subpages/goods/subpages/cart/index.wxss
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxss
@@ -27,6 +27,7 @@
   padding-right: 12px;
   color: #fff;
   font-size: 14px;
+  line-height: 1;
   border-left: 0.5px solid rgba(255,255,255,0.3);
 }
 .navigation-title {
