--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -18,9 +18,9 @@
   <view class="cart-list-wrap">
     <view class="cart-list" wx:for="{{cartList}}" wx:key="index">
       <view class="cart-list-header">
-        <checkbox checked="{{item.checked}}" data-index="{{index}}" ontap="toggleCartChecked"/>
-        <view class="shop-info" wx:if="{{item.shopInfo}}" ontap="navToShop" data-id="{{item.shopInfo.id}}">
-          <image class="shop-img" src="{{item.shopInfo.avatar}}" />
+        <checkbox checked="{{item.checked}}" data-index="{{index}}" bindtap="toggleCartChecked"/>
+        <view class="shop-info" wx:if="{{item.shopInfo}}" bindtap="navToShop" data-id="{{item.shopInfo.id}}">
+          <image class="shop-img" src="{{item.shopInfo.avatar}}" lazy-load />
           <view>{{item.shopInfo.name}}</view>
           <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
         </view>
@@ -30,8 +30,8 @@
         <view wx:for="{{item.goodsList}}" wx:key="index" wx:for-index="_index" wx:for-item="_item">
           <van-swipe-cell bind:close="deleteGoods" right-width="{{ 65 }}">
             <view class="goods-list row">
-              <checkbox checked="{{_item.is_checked_goods}}" disabled="{{_item.status !== 1}}" ontap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
-              <image class="goods-img" mode="aspectFill" src="{{_item.goodsImage}}" data-id="{{_item.id}}" ontap="showGoodsDetail"/>
+              <checkbox checked="{{_item.is_checked_goods}}" disabled="{{_item.status !== 1}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
+              <image class="goods-img" src="{{_item.goodsImage}}" bindtap="showGoodsDetail" data-id="{{_item.id}}" mode="aspectFill" lazy-load  />
               <view class="goods-content">
                 <view class="goods-name {{_item.status !== 1 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
                 <block wx:if="{{_item.status === 1}}">
@@ -49,7 +49,7 @@
                 </block>
                 <view class="invalid-tips-wrap" wx:if="{{_item.status !== 1}}">
                   <view class="invalid-tips">请重新选择规格</view>
-                  <view class="reset-spec-btn" ontap="editSpec" data-info="{{_item}}">重选</view>
+                  <view class="reset-spec-btn" bindtap="editSpec" data-info="{{_item}}">重选</view>
                 </view>
               </view>
             </view>
@@ -69,7 +69,7 @@
 </view>
 
 <view class="bottom-bar" wx:if="{{cartList.length}}">
-  <view class="select-all" ontap="toggleAllChecked">
+  <view class="select-all" bindtap="toggleAllChecked">
     <checkbox checked="{{isSelectAll}}" />
     <view>全选</view>
   </view>
@@ -84,7 +84,7 @@
       <text wx:if="{{selectedCount}}">({{selectedCount}})</text>
     </view>
   </view>
-  <view class="delete-btn {{selectedCount ? 'active' : ''}}" wx:if="{{deleteBtnVision}}" ontap="deleteGoodsList">删除</view>
+  <view class="delete-btn {{selectedCount ? 'active' : ''}}" wx:if="{{deleteBtnVision}}" bindtap="deleteGoodsList">删除</view>
 </view>
 
 <spec-popup show="{{specModalVisible}}" mode="{{3}}" goodsInfo="{{goodsInfo}}" bind:hide="finishEdit" />
