feat: 商品详情页购物车商品数量

--- a/pages/mall/subpages/goods/index.wxml
+++ b/pages/mall/subpages/goods/index.wxml
@@ -5,7 +5,10 @@
       <image class="search-icon" src="/images/search.png" />
       <text class="placeholder">搜索商品</text>
     </view>
-    <image class="cart-icon" src="./images/cart.png" bindtap="navToCart" />
+    <navigator class="cart-icon-wrap" url="/pages/mall/subpages/goods/subpages/cart/index" hover-class="none">
+      <image class="cart-icon" src="./images/cart.png"/>
+      <view class="cart-count" wx:if="{{cartGoodsNumber}}">{{cartGoodsNumber}}</view>
+    </navigator>
   </view>
   <scroll-view 
     class="category-tabs" 
