--- a/pages/mall/subpages/goods/index.wxss
+++ b/pages/mall/subpages/goods/index.wxss
@@ -36,10 +36,30 @@
   color: #666;
   font-size: 14px;
 }
-.cart-icon {
+.cart-icon-wrap {
+  position: relative;
   margin-left: 8px;
   width: 22px;
   height: 22px;
+  font-size: 0;
+  overflow: initial;
+}
+.cart-icon {
+  width: 100%;
+  height: 100%;
+}
+.cart-count {
+  position: absolute;
+  top: -10rpx;
+  right: -16rpx;
+  padding: 0 10rpx;
+  height: 30rpx;
+  color: #fff;
+  font-size: 18rpx;
+  line-height: 30rpx;
+  border-radius: 15rpx;
+  background: #FE4019;
+  transform: scale(0.8);
 }
 
 .category-tabs {
