--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -9,12 +9,13 @@
   <view style="flex: 1;"></view>
 </view>
 
-<view class="empty-illus" style="margin-top: {{statusBarHeight + 260}}px;" wx:if="{{!cartList.length}}">
-  <view class="empty-desc">还没有宝贝哦，快去挑选喜欢的宝贝吧～</view>
-  <navigator class="visit-btn" url="/pages/tab-bar-pages/mall/index" open-type="switchTab" hover-class="navigator-hover">去逛逛</navigator>
-</view>
+
 
 <view class="wrap" style="padding-top: {{statusBarHeight + 44}}px;">
+  <view class="empty-illus" wx:if="{{!cartList.length}}">
+    <view class="empty-desc">还没有宝贝哦，快去挑选喜欢的宝贝吧～</view>
+    <navigator class="visit-btn" url="/pages/mall/subpages/goods/index" hover-class="navigator-hover">去逛逛</navigator>
+  </view>
   <view class="cart-list-wrap">
     <view class="cart-list" wx:for="{{cartList}}" wx:key="index">
       <view class="cart-list-header">
