--- a/pages/mall/subpages/goods/subpages/cart/index.wxss
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxss
@@ -67,19 +67,22 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 500rpx;
 }
 .empty-desc {
   color: #666;
   font-size: 28rpx;
 }
 .visit-btn {
-  margin-top: 56rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 32rpx;
   width: 150rpx;
   height: 60rpx;
   color: #FD0B0A;
   font-size: 28rpx;
-  text-align: center;
-  line-height: 60rpx;
   border-radius: 30rpx;
   border: 2rpx solid #FD0B0A;
 }
