--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -27,7 +27,7 @@
         <view wx:for="{{item.goodsList}}" wx:key="index" wx:for-index="_index" wx:for-item="_item">
           <van-swipe-cell bind:close="deleteGoods" right-width="{{ 65 }}">
             <view class="goods-list row">
-              <checkbox checked="{{_item.is_checked_goods}}" disabled="{{_item.status !== 1}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
+              <checkbox checked="{{_item.checked}}" disabled="{{_item.status !== 1}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
               <image class="goods-img" src="{{_item.goodsImage}}" bindtap="showGoodsDetail" data-id="{{_item.id}}" mode="aspectFill" lazy-load  />
               <view class="goods-content">
                 <view class="goods-name {{_item.status !== 1 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
@@ -81,12 +81,12 @@
       <text>¥</text>
       <text style="font-size: 36rpx;">{{totalPrice}}</text>
     </view>
-    <view class="submit {{selectedCount ? 'active' : ''}}" bindtap="submit">
+    <button class="submit {{selectedCount ? 'active' : ''}}" bindtap="submit">
       <text>结算</text>
       <text wx:if="{{selectedCount}}">({{selectedCount}})</text>
-    </view>
+    </button>
   </view>
-  <view class="delete-btn {{selectedCount ? 'active' : ''}}" wx:if="{{deleteBtnVision}}" bindtap="deleteGoodsList">删除</view>
+  <button class="delete-btn {{selectedCount ? 'active' : ''}}" wx:if="{{deleteBtnVision}}" bindtap="deleteGoodsList">删除</button>
 </view>
 
 <spec-popup show="{{specModalVisible}}" mode="{{3}}" goodsInfo="{{goodsInfo}}" bind:hide="finishEdit" />
