--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -30,7 +30,7 @@
               <view class="goods-content">
                 <view class="goods-name {{_item.status !== 1 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
                 <block wx:if="{{_item.status === 1}}">
-                  <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" catchtap="editSpec" data-info="{{_item}}">
+                  <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">
                     <text class="goods-sku">已选：{{_item.selectedSkuName}}</text>
                     <image class="sku-edit-icon" src="https://img.ubo.vip/mp/to-icon.png" />
                   </view>
@@ -86,4 +86,4 @@
   <button class="delete-btn {{selectedCount ? 'active' : ''}}" wx:if="{{deleteBtnVisible}}" bindtap="deleteGoodsList">删除</button>
 </view>
 
-<spec-popup show="{{specPopupVisible}}" mode="{{3}}" goodsInfo="{{goodsInfo}}" cartInfo="{{cartInfo}}" bind:hide="finishEdit" />
+<spec-popup show="{{specPopupVisible}}" mode="{{3}}" goodsInfo="{{goodsInfo}}" cartInfo="{{cartInfo}}" bind:hide="hideSpecPopup" />
