--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -39,7 +39,7 @@
                       <price-unit price="{{_item.price}}" />
                       <view class="price-market" wx:if="{{_item.marketPrice}}">¥{{_item.marketPrice}}</view>
                     </view>
-                    <van-stepper value="{{ _item.number }}" bind:change="countChange" data-cart-index="{{index}}" data-goods-index="{{_index}}" integer max="{{_item.stock}}" />
+                    <van-stepper value="{{ _item.number }}" async-change bind:change="countChange" data-cart-index="{{index}}" data-goods-index="{{_index}}" integer max="{{_item.stock}}" catchtap="catchtap" />
                   </view>
                 </block>
                 <view class="invalid-tips-wrap" wx:if="{{_item.status === 2}}">
