--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -28,7 +28,7 @@
               <checkbox checked="{{_item.checked}}" disabled="{{_item.status !== 1}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
               <image class="goods-img" src="{{_item.goodsImage}}" mode="aspectFill" lazy-load  />
               <view class="goods-content">
-                <view class="goods-name {{_item.status !== 1 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
+                <view class="goods-name">{{_item.goodsName}}</view>
                 <block wx:if="{{_item.status === 1}}">
                   <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">
                     <text class="goods-sku">已选：{{_item.selectedSkuName}}</text>
@@ -43,8 +43,8 @@
                   </view>
                 </block>
                 <view class="invalid-tips-wrap" wx:if="{{_item.status === 2}}">
-                  <view class="invalid-tips">请重新选择规格</view>
-                  <view class="reset-spec-btn" bindtap="editSpec" data-info="{{_item}}">重选</view>
+                  <view class="invalid-tips">{{_item.statusDesc}}</view>
+                  <view class="reset-spec-btn" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">重选</view>
                 </view>
               </view>
             </view>
