--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -25,10 +25,10 @@
         <view wx:for="{{item.goodsList}}" wx:key="index" wx:for-index="_index" wx:for-item="_item">
           <van-swipe-cell bind:close="deleteGoods" data-id="{{_item.id}}" data-cart-index="{{index}}" data-goods-index="{{_index}}" async-close right-width="{{ 65 }}">
             <view class="goods-list row" bindtap="showGoodsDetail" data-id="{{_item.goodsId}}">
-              <checkbox checked="{{_item.checked}}" disabled="{{_item.status !== 1}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
-              <image class="goods-img" src="{{_item.goodsImage}}" mode="aspectFill" lazy-load  />
+              <checkbox checked="{{_item.checked}}" disabled="{{_item.status !== 1 && !deleteBtnVisible}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
+              <image class="goods-img {{_item.status === 3 ? 'invalid' : ''}}" src="{{_item.goodsImage}}" mode="aspectFill" lazy-load />
               <view class="goods-content">
-                <view class="goods-name">{{_item.goodsName}}</view>
+                <view class="goods-name {{_item.status === 3 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
                 <block wx:if="{{_item.status === 1}}">
                   <view class="goods-sku-wrap" wx:if="{{_item.selectedSkuName}}" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">
                     <text class="goods-sku">已选：{{_item.selectedSkuName}}</text>
@@ -42,9 +42,9 @@
                     <van-stepper value="{{ _item.number }}" async-change bind:change="countChange" data-cart-index="{{index}}" data-goods-index="{{_index}}" integer max="{{_item.stock}}" catchtap="catchtap" />
                   </view>
                 </block>
-                <view class="invalid-tips-wrap" wx:if="{{_item.status === 2}}">
+                <view class="invalid-tips-wrap" wx:if="{{_item.status !== 1 }}">
                   <view class="invalid-tips">{{_item.statusDesc}}</view>
-                  <view class="reset-spec-btn" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">重选</view>
+                  <view class="reset-spec-btn" wx:if="{{_item.status === 2}}" catchtap="showSpecPopup" data-info="{{_item}}" data-cart-index="{{index}}" data-goods-index="{{_index}}">重选</view>
                 </view>
               </view>
             </view>
