--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -14,11 +14,27 @@
 .content {
   padding: 12rpx;
 }
+
 .title {
   color: #333;
   font-size: 26rpx;
   font-weight: bold;
 }
+.goods-tag {
+  display: inline-block;
+  margin-bottom: 1rpx;
+  padding: 0 12rpx;
+  height: 33rpx;
+  color: #FFE5BD;
+  font-size: 18rpx;
+  line-height: 33rpx;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: text-bottom;
+  border-radius: 8rpx;
+  background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
+}
+
 .info-wrap {
   margin-top: 12rpx;
 }
