--- a/pages/mall/subpages/goods/index.wxss
+++ b/pages/mall/subpages/goods/index.wxss
@@ -22,7 +22,7 @@
   align-items: center;
   margin-left: 8px;
   padding-left: 12px;
-  width: 200px;
+  width: 350rpx;
   height: 36px;
   border-radius: 18px;
   background: #f5f6f7;
