--- a/pages/mall/subpages/goods/subpages/cart/index.wxml
+++ b/pages/mall/subpages/goods/subpages/cart/index.wxml
@@ -13,7 +13,7 @@
   <view class="cart-list-wrap" wx:if="{{cartList.length}}">
     <view class="cart-list" wx:for="{{cartList}}" wx:key="index">
       <view class="cart-list-header">
-        <checkbox checked="{{item.checked}}" data-index="{{index}}" bindtap="toggleCartChecked"/>
+        <checkbox class="checkbox {{deleteBtnVisible ? 'danger' : ''}}" checked="{{item.checked}}" data-index="{{index}}" bindtap="toggleCartChecked"/>
         <view class="shop-info" wx:if="{{item.shopInfo}}" bindtap="navToShop" data-id="{{item.shopInfo.id}}">
           <image class="shop-img" src="{{item.shopInfo.avatar}}" lazy-load />
           <view>{{item.shopInfo.name}}</view>
@@ -25,7 +25,7 @@
         <view wx:for="{{item.goodsList}}" wx:key="index" wx:for-index="_index" wx:for-item="_item">
           <van-swipe-cell bind:close="deleteGoods" data-id="{{_item.id}}" data-cart-index="{{index}}" data-goods-index="{{_index}}" async-close right-width="{{ 65 }}">
             <view class="goods-list row" bindtap="showGoodsDetail" data-id="{{_item.goodsId}}">
-              <checkbox checked="{{_item.checked}}" disabled="{{_item.status !== 1 && !deleteBtnVisible}}" bindtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
+              <checkbox class="checkbox {{deleteBtnVisible ? 'danger' : ''}}" checked="{{_item.checked}}" disabled="{{_item.status !== 1 && !deleteBtnVisible}}" catchtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
               <image class="goods-img {{_item.status === 3 ? 'invalid' : ''}}" src="{{_item.goodsImage}}" mode="aspectFill" lazy-load />
               <view class="goods-content">
                 <view class="goods-name {{_item.status === 3 ? 'invalid' : ''}}">{{_item.goodsName}}</view>
@@ -70,7 +70,7 @@
 
 <view class="bottom-bar" wx:if="{{cartList.length}}">
   <view class="select-all" bindtap="toggleAllChecked">
-    <checkbox checked="{{isSelectAll}}" />
+    <checkbox class="checkbox {{deleteBtnVisible ? 'danger' : ''}}" checked="{{isSelectAll}}" />
     <view>全选</view>
   </view>
   <view class="bar-main" wx:if="{{!deleteBtnVisible}}">
