--- a/pages/mall/subpages/goods/subpages/search/index.wxml
+++ b/pages/mall/subpages/goods/subpages/search/index.wxml
@@ -31,7 +31,7 @@
     <view 
       class="keywords" 
       wx:for="{{historyKeywordsList}}" wx:key="index" 
-      bindtap="keywordSelect" data-keywords="{{item}}"
+      bindtap="selectKeywords" data-keywords="{{item}}"
     >
       {{item}}
     </view>
